--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 #except the pdf documentation !
 !refman.pdf
 
+#And the latex report
+!/docs/report/
+
 #Ignore the binary of the project
 #The binary at the root
 #But also the binaries created for the test
@@ -32,3 +35,28 @@ Makefile
 
 #Ignore the save files
 *.dat
+
+#Ignore latex temp files
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
